--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -3,20 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
             height: 100vh;
-            background-color: black;
-            background-image: url('imagens/wallpaper002.jpg');
-            background-position: center center;
-            background-repeat: no-repeat;
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
             background-size: cover;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            width: 450px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -27,7 +24,8 @@
 <body>
     <main>
         <h1>teste de imagem de fundo</h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil harum itaque qui dignissimos dolorum quisquam quaerat esse eaque, voluptas magni amet commodi consequuntur quos porro ducimus assumenda quod quia Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae omnis nihil, veniam veritatis numquam odio, eum incidunt, nobis labore debitis excepturi fugiat sint nam temporibus. Facere velit obcaecati fuga ></p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil harum itaque qui dignissimos dolorum quisquam quaerat esse eaquelalalalalalalaalal, voluptas magni amet commodi consequuntur quos porro ducimus assumenda quod quia Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae omnis nihil, veniam veritatis numquam odio, eum incidunt, nobis labore debitis excepturi fugiat sint nam temporibus. Facere velit obcaecati fuga > Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere culpa autem est fuga, ad rerum dolores. Eum neque beatae, enim, dignissimos quasi praesentium optio, porro cum dolores saepe reiciendis ratione! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus quod doloremque sit neque, dicta labore, dolorum fuga dolore vitae ratione omnis soluta cum esse? Pariatur nihil quo at asperiores mollitia.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, similique modi voluptatem reiciendis at accusantium alias aut. Assumenda iure excepturi recusandae in exercitationem, quas delectus mollitia perferendis quod facere iusto!Lorem Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis voluptas repellat animi, facere cumque laboriosam rerum rem perspiciatis corrupti earum consequatur id voluptates accusamus fugiat sunt voluptatum, quo, eos voluptatem!Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, libero non! Inventore harum voluptas asperiores, perspiciatis enim minus! Laboriosam consequuntur ea sit placeat molestiae eius. Ipsam harum magni itaque nesciunt. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae dignissimos nulla deleniti dolorem a illum iure praesentium, totam architecto error explicabo doloremque dolores corporis perspiciatis? Illum sapiente in alias harum. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem dignissimos voluptate velit fugiat ipsa? Velit nihil repellat, necessitatibus nisi molestiae ex aut pariatur quidem, earum quas rem exercitationem rerum aliquid. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde sit a aut mollitia odit quae iusto sequi? Harum quisquam cumque quia nostrum quam obcaecati aspernatur, at autem voluptatibus, porro ipsam! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi ipsum fugit dolorem tenetur laudantium quas numquam labore quasi voluptates vel ipsam accusamus voluptatibus aspernatur officia quod dignissimos, iure libero pariatur. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis provident perferendis labore non in id a ullam consequuntur culpa. Quam laudantium esse id expedita ipsam dolores numquam aspernatur fugiat assumenda. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis maiores, assumenda ipsam tempora vitae nemo commodi voluptas ratione atque aut vel reiciendis dolores quasi? Possimus ea eos exercitationem qui at.</p>
     </main>
 </body>
 </html>
